(library
 (public_name bz2)
 (synopsis "bindings for bzip2")
 (modules bz2)
 (c_names c_bz)
 (c_flags
  "-DBZ_PREFIX"
  (:include c_flags.sexp))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
